# AegisTwin

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SALE_READINESS_CHECKLIST.md  SECURITY.md  VALUATION_ROADMAP.md  pyproject.toml
DigitalTwin/: .created  .gitignore  COMPLETION_SUMMARY.md  COMPREHENSIVE_PROJECT_ASSESSMENT.md  Dockerfile  Dockerfile.production  FINAL_COMPLETION_REPORT.md  LLM_AGENT_COMPLETION_PLAN.md  Makefile  PROJECT_STATUS_SUMMARY.md  README.md  README_integrated_system.md  REALISTIC_PROJECT_ANALYSIS.md  UI_ALIGNMENT_ANALYSIS.md  UI_FINAL_ASSESSMENT.md  UI_IMPROVEMENT_SUMMARY.md  UPDATED_COMPLETION_PLAN.md  check_system_status.py  cognitive_twin_integration.patch  cognitive_twin_integration_status.md  cognitive_twin_integration_summary.md  ct_omega_integration_plan.md  ct_omega_integration_summary.md  data_analysis_platform_specification.md  deploy.sh  deploy_integrated_system.py  digital_twin_ct_modules_integration_plan.md  digital_twin_enhancement_comprehensive_summary.md  digital_twin_enhancement_plan.md  digital_twin_enhancement_summary.md  digital_twin_implementation_plan.md  digital_twin_implementation_summary.md  digital_twin_specification.md  docker-compose.production.yml  docker-compose.yml  enhanced_adaptive_evolution_plan.md  env.production.example  executive_summary.md  final_system_validation.py  implementation_plan.md  (+33 more)
HydraMind_v1/: .gitignore  LICENSE  README.md  hydramind.yaml  requirements.txt  setup.py
aegistwin/: __init__.py  cli.py  config.py  exceptions.py
benchmarks/: README.md  __init__.py  bench_event_bus.py  bench_memory.py  bench_policy.py  bench_replay.py  load_test.py  run_benchmarks.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
diligence_pack/: CASE_STUDY_TEMPLATE.md  ONE_PAGER.md  PATENT_GUIDANCE.md  PII_PURGE_REPORT.md  sbom.json
docker/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: 00_INVENTORY.md  01_PRIVACY_AND_PURGE.md  02_EVENT_SCHEMA.md  10_ARCHITECTURE.md  11_SECURITY_GOVERNANCE.md  12_REPLAY_DEBUGGING.md  13_EMBEDDING_GUIDE.md  14_LICENSE_PROVENANCE.md  15_OBSERVABILITY.md  16_PLUGINS.md  COMPETITIVE_ANALYSIS.md  PERFORMANCE.md  PII_SCAN_REPORT.md
examples/: 01_basic_sdk_usage.py  02_policy_enforcement.py  README.md  (+7 more)
(+1458 files in other folders)
